# judicial-doc-quality-mcp

./: .env.example  .gitignore  LICENSE  PHASE1_DIFF.md  README.md  README_EN.md  _check_report.py  _dryrun_test.py  _fix_table.py  _real_test_v12.py  _verify_all.py  assess_doc.py  batch_assess.py  demo_supplementary_doc.py  pyproject.toml  test_auto_detect.py  test_debug_aux.py  test_e2e_merged.py  test_evasive_debug.py  test_full_merged.py  test_merged_report.py  test_new_tools.py  test_token_budget.py
anchors/: clear_facts_examples.json  concise_language_examples.json  correct_law_application_examples.json  formal_specification_examples.json  reasoning_examples.json  substantive_resolution_examples.json  sufficient_evidence_examples.json
docs/: L1_L3_implementation_plan.md  project_close_report.md
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
scripts/: test_anomaly_data.py  test_parse.py
skills/: _neutrality.md  _output_format.md  _system.md  _taxonomy.md
skills/dimensions/: 01_formal_specification.md  02_clear_facts.md  03_sufficient_evidence.md  04_correct_law_application.md  05_reasoning.md  06_substantive_resolution.md  07_concise_language.md
skills/phases/: 00_precheck.md  01_quality_assessment.md  02_anomaly_integration.md  03_auxiliary_detection.md  04_report_generation.md
src/judicial_quality_mcp/: __init__.py  anomaly_bridge.py  config.py  law_reference.py  material_preprocessor.py  models.py  pipeline_state.py  prompt_builder.py  report_builder.py  server.py  (+5 more)
tests/: debug_regex.py  test_phase1.py  test_v020_modules.py
