[project]
name = "judicial-doc-quality-mcp"
version = "0.2.0"
description = "MCP Server for judicial document quality assessment — Bridge Architecture, no LLM calls"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
anomaly = [
    "judicial-lint-mcp>=0.5.0",
]

[project.urls]
Repository = "https://github.com/lcfactorization/judicial-doc-quality-mcp"
AnomalyMCP = "https://github.com/lcfactorization/judicial-doc-anomaly-mcp"

[project.scripts]
judicial-quality = "judicial_quality_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/judicial_quality_mcp"]
